k8s/service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: corpsite
  namespace: chewedfeed
  labels:
    name: corpsite
    app: corpsite
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 3
  selector:
    matchLabels:
      name: corpsite
  template:
    metadata:
      labels:
        name: corpsite
        app: corpsite
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: corpsite
          image: containers.chewedfeed.com/chewedfeed/corpsite:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: corpsite
  namespace: chewedfeed
  labels:
    name: corpsite
    app: corpsite
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: corpsite
